[gd_scene load_steps=2 format=3 uid="uid://30i420qrdnkw"]

[ext_resource type="Script" uid="uid://cs02h8ib40hig" path="res://scripts/base_explosion.gd" id="1_bb5nk"]

[node name="BaseExplosion" type="Node2D"]
script = ExtResource("1_bb5nk")

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 1.25
one_shot = true

[node name="ExplosionVfx" type="Sprite2D" parent="."]
